5.6_Ingress/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: playground-svc
spec:
  selector:
    app: go-playground
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
